--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext lab_black\n",
+    "#%load_ext lab_black\n",
     "import pandas as pd\n",
     "import altair as alt\n",
     "from IPython.display import Markdown as md\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,70 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"altair-viz-56bcc84d97344782ae3a338cbc8a0797\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-56bcc84d97344782ae3a338cbc8a0797\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-56bcc84d97344782ae3a338cbc8a0797\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
-       "    };\n",
-       "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
-       "    }\n",
-       "\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
-       "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-056b9873676aaf247baf84f577aee4e7\"}, \"mark\": \"line\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\"}, {\"type\": \"quantitative\", \"field\": \"distance\"}, {\"type\": \"nominal\", \"field\": \"variable\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-06-01\", \"2020-06-18T17:00:40.237719\"]}, \"timeUnit\": \"yearmonthdate\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"distance\"}}, \"selection\": {\"selector003\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-056b9873676aaf247baf84f577aee4e7\": [{\"date\": \"2020-06-01T00:00:00+00:00\", \"variable\": \"max_distance\", \"distance\": 0.0}, {\"date\": \"2020-06-18T16:59:41.651537+00:00\", \"variable\": \"max_distance\", \"distance\": 698630.1369863014}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"odometer\", \"distance\": 198041.0}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"odometer\", \"distance\": 282735.0}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-04T08:42:12+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "alt.Chart(...)"
-      ]
+      "text/html": "\n<div id=\"altair-viz-a2da18cd5da04161b9201e64aec9f48e\"></div>\n<script type=\"text/javascript\">\n  (function(spec, embedOpt){\n    let outputDiv = document.currentScript.previousElementSibling;\n    if (outputDiv.id !== \"altair-viz-a2da18cd5da04161b9201e64aec9f48e\") {\n      outputDiv = document.getElementById(\"altair-viz-a2da18cd5da04161b9201e64aec9f48e\");\n    }\n    const paths = {\n      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n    };\n\n    function loadScript(lib) {\n      return new Promise(function(resolve, reject) {\n        var s = document.createElement('script');\n        s.src = paths[lib];\n        s.async = true;\n        s.onload = () => resolve(paths[lib]);\n        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n        document.getElementsByTagName(\"head\")[0].appendChild(s);\n      });\n    }\n\n    function showError(err) {\n      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n      throw err;\n    }\n\n    function displayChart(vegaEmbed) {\n      vegaEmbed(outputDiv, spec, embedOpt)\n        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n    }\n\n    if(typeof define === \"function\" && define.amd) {\n      requirejs.config({paths});\n      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n    } else if (typeof vegaEmbed === \"function\") {\n      displayChart(vegaEmbed);\n    } else {\n      loadScript(\"vega\")\n        .then(() => loadScript(\"vega-lite\"))\n        .then(() => loadScript(\"vega-embed\"))\n        .catch(showError)\n        .then(() => displayChart(vegaEmbed));\n    }\n  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-92dbcc1ac266af43fe08cf4558b4ad00\"}, \"mark\": \"line\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\"}, {\"type\": \"quantitative\", \"field\": \"distance\"}, {\"type\": \"nominal\", \"field\": \"variable\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-06-01\", \"2020-06-18T20:57:18.866931\"]}, \"timeUnit\": \"yearmonthdate\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"distance\"}}, \"selection\": {\"selector001\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-92dbcc1ac266af43fe08cf4558b4ad00\": [{\"date\": \"2020-06-01T00:00:00+00:00\", \"variable\": \"max_distance\", \"distance\": 0.0}, {\"date\": \"2020-06-18T20:57:18.866931+00:00\", \"variable\": \"max_distance\", \"distance\": 698630.1369863014}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"odometer\", \"distance\": 198041.0}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"odometer\", \"distance\": 282735.0}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-04T08:42:12+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}]}}, {\"mode\": \"vega-lite\"});\n</script>",
+      "text/plain": "alt.Chart(...)"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -138,25 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/markdown": [
-       "Senast uppdaterad: 2020-06-04"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
+      "text/plain": "<IPython.core.display.Markdown object>",
+      "text/markdown": "Uppdaterad 2020-06-04"
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
-    "md(f\"Senast uppdaterad: {pd.datetime.today().strftime('%Y-%m-%d')}\")"
+    "md(f\"Uppdaterad {pd.datetime.today().strftime('%Y-%m-%d')}\")"
    ]
   }
  ],
@@ -176,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
