--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "csv_file = \"odometer.csv\"\n",
     "# Dates to show in graph\n",
     "start_date = \"2020-06-01\"\n",
-    "end_date = dt.datetime.today() + dt.timedelta(weeks=2)\n",
+    "end_date = dt.datetime.today() + dt.timedelta(weeks=4)\n",
     "end_date = end_date.isoformat()\n",
     "target_distance = (\n",
     "    max_annual_distance\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/html": "\n<div id=\"altair-viz-a2b12ef28b0b482b99cc51bb3dcc8243\"></div>\n<script type=\"text/javascript\">\n  (function(spec, embedOpt){\n    let outputDiv = document.currentScript.previousElementSibling;\n    if (outputDiv.id !== \"altair-viz-a2b12ef28b0b482b99cc51bb3dcc8243\") {\n      outputDiv = document.getElementById(\"altair-viz-a2b12ef28b0b482b99cc51bb3dcc8243\");\n    }\n    const paths = {\n      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n    };\n\n    function loadScript(lib) {\n      return new Promise(function(resolve, reject) {\n        var s = document.createElement('script');\n        s.src = paths[lib];\n        s.async = true;\n        s.onload = () => resolve(paths[lib]);\n        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n        document.getElementsByTagName(\"head\")[0].appendChild(s);\n      });\n    }\n\n    function showError(err) {\n      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n      throw err;\n    }\n\n    function displayChart(vegaEmbed) {\n      vegaEmbed(outputDiv, spec, embedOpt)\n        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n    }\n\n    if(typeof define === \"function\" && define.amd) {\n      requirejs.config({paths});\n      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n    } else if (typeof vegaEmbed === \"function\") {\n      displayChart(vegaEmbed);\n    } else {\n      loadScript(\"vega\")\n        .then(() => loadScript(\"vega-lite\"))\n        .then(() => loadScript(\"vega-embed\"))\n        .catch(showError)\n        .then(() => displayChart(vegaEmbed));\n    }\n  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-d3f692f1730311666edf77f5283f2759\"}, \"mark\": {\"type\": \"line\", \"point\": true}, \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\"}, {\"type\": \"quantitative\", \"field\": \"distance\"}, {\"type\": \"nominal\", \"field\": \"variable\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-06-01\", \"2020-06-19T10:40:01.690613\"]}, \"timeUnit\": \"yearmonthdate\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"distance\"}}, \"selection\": {\"selector001\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-d3f692f1730311666edf77f5283f2759\": [{\"date\": \"2020-06-01T00:00:00+00:00\", \"variable\": \"max_distance\", \"distance\": 0.0}, {\"date\": \"2020-06-19T10:40:01.690613+00:00\", \"variable\": \"max_distance\", \"distance\": 739726.0273972603}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"odometer\", \"distance\": 198041.0}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"odometer\", \"distance\": 282735.0}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-05T00:01:48+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}]}}, {\"mode\": \"vega-lite\"});\n</script>",
+      "text/html": "\n<div id=\"altair-viz-e405b9398c05440db475b38f91e35687\"></div>\n<script type=\"text/javascript\">\n  (function(spec, embedOpt){\n    let outputDiv = document.currentScript.previousElementSibling;\n    if (outputDiv.id !== \"altair-viz-e405b9398c05440db475b38f91e35687\") {\n      outputDiv = document.getElementById(\"altair-viz-e405b9398c05440db475b38f91e35687\");\n    }\n    const paths = {\n      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n    };\n\n    function loadScript(lib) {\n      return new Promise(function(resolve, reject) {\n        var s = document.createElement('script');\n        s.src = paths[lib];\n        s.async = true;\n        s.onload = () => resolve(paths[lib]);\n        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n        document.getElementsByTagName(\"head\")[0].appendChild(s);\n      });\n    }\n\n    function showError(err) {\n      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n      throw err;\n    }\n\n    function displayChart(vegaEmbed) {\n      vegaEmbed(outputDiv, spec, embedOpt)\n        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n    }\n\n    if(typeof define === \"function\" && define.amd) {\n      requirejs.config({paths});\n      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n    } else if (typeof vegaEmbed === \"function\") {\n      displayChart(vegaEmbed);\n    } else {\n      loadScript(\"vega\")\n        .then(() => loadScript(\"vega-lite\"))\n        .then(() => loadScript(\"vega-embed\"))\n        .catch(showError)\n        .then(() => displayChart(vegaEmbed));\n    }\n  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-e491617883e726f8aefdb0a1c97cdaf8\"}, \"mark\": {\"type\": \"line\", \"point\": true}, \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\"}, {\"type\": \"quantitative\", \"field\": \"distance\"}, {\"type\": \"nominal\", \"field\": \"variable\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-06-01\", \"2020-07-14T08:24:34.989193\"]}, \"timeUnit\": \"yearmonthdate\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"distance\"}}, \"selection\": {\"selector015\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-e491617883e726f8aefdb0a1c97cdaf8\": [{\"date\": \"2020-06-01T00:00:00+00:00\", \"variable\": \"max_distance\", \"distance\": 0.0}, {\"date\": \"2020-07-14T08:24:34.989193+00:00\", \"variable\": \"max_distance\", \"distance\": 1767123.2876712328}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"odometer\", \"distance\": 198041.0}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"odometer\", \"distance\": 282735.0}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-05T00:01:48+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-06T00:11:44+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-07T00:11:36+00:00\", \"variable\": \"odometer\", \"distance\": 301534.0}, {\"date\": \"2020-06-08T00:11:18+00:00\", \"variable\": \"odometer\", \"distance\": 305660.0}, {\"date\": \"2020-06-09T00:06:48+00:00\", \"variable\": \"odometer\", \"distance\": 323544.0}, {\"date\": \"2020-06-10T00:07:16+00:00\", \"variable\": \"odometer\", \"distance\": 352162.0}, {\"date\": \"2020-06-11T00:06:51+00:00\", \"variable\": \"odometer\", \"distance\": 402273.0}, {\"date\": \"2020-06-12T00:07:14+00:00\", \"variable\": \"odometer\", \"distance\": 421123.0}, {\"date\": \"2020-06-13T00:07:02+00:00\", \"variable\": \"odometer\", \"distance\": 426678.0}, {\"date\": \"2020-06-14T00:07:37+00:00\", \"variable\": \"odometer\", \"distance\": 432066.0}, {\"date\": \"2020-06-15T00:07:06+00:00\", \"variable\": \"odometer\", \"distance\": 459655.0}, {\"date\": \"2020-06-16T00:07:02+00:00\", \"variable\": \"odometer\", \"distance\": 579657.0}]}}, {\"mode\": \"vega-lite\"});\n</script>",
       "text/plain": "alt.Chart(...)"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 29
     }
    ],
    "source": [
@@ -77,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Uppdaterad 2020-06-05"
+      "text/markdown": "Uppdaterad 2020-06-16"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 17
     }
    ],
    "source": [
