--- a/volvo.ipynb
+++ b/volvo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,25 @@
     "max_annual_distance = 15_000_000\n",
     "csv_file = \"odometer.csv\"\n",
     "# Dates to show in graph\n",
-    "start_date = \"2020-06-01\"\n",
+    "start_date = \"2020-05-29\"\n",
     "end_date = dt.datetime.today() + dt.timedelta(weeks=4)\n",
     "end_date = end_date.isoformat()\n",
+    "days_driven = (pd.to_datetime(dt.datetime.today()) - pd.to_datetime(start_date)).days\n",
     "target_distance = (\n",
     "    max_annual_distance\n",
     "    * (pd.to_datetime(end_date) - pd.to_datetime(start_date)).days\n",
     "    / 365\n",
+    ")\n",
+    "\n",
+    "max_distance_today = (\n",
+    "    max_annual_distance\n",
+    "    * days_driven / 365\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,70 +42,76 @@
     "df_max = pd.DataFrame(\n",
     "    {\n",
     "        \"date\": pd.to_datetime([start_date, end_date], utc=True),\n",
-    "        \"variable\": \"max_distance\",\n",
+    "        \"variable\": \"Max km\",\n",
     "        \"distance\": [0, target_distance],\n",
     "    }\n",
     ")\n",
-    "df = pd.concat([df_max, df_csv])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Körda kilometer sedan 1 juni 2020\n",
-    "Antal körda kilometer jämfört med vad som gäller i leasingavtalet. Sista datumet i grafen är 2 veckor efter senaste uppdateringen."
+    "df = pd.concat([df_max, df_csv])\n",
+    "df.distance = df.distance / 1000\n",
+    "df = df.replace('odometer', 'Körda km')\n",
+    "df = df.rename(columns={'distance': 'Sträcka'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": "\n<div id=\"altair-viz-e405b9398c05440db475b38f91e35687\"></div>\n<script type=\"text/javascript\">\n  (function(spec, embedOpt){\n    let outputDiv = document.currentScript.previousElementSibling;\n    if (outputDiv.id !== \"altair-viz-e405b9398c05440db475b38f91e35687\") {\n      outputDiv = document.getElementById(\"altair-viz-e405b9398c05440db475b38f91e35687\");\n    }\n    const paths = {\n      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n    };\n\n    function loadScript(lib) {\n      return new Promise(function(resolve, reject) {\n        var s = document.createElement('script');\n        s.src = paths[lib];\n        s.async = true;\n        s.onload = () => resolve(paths[lib]);\n        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n        document.getElementsByTagName(\"head\")[0].appendChild(s);\n      });\n    }\n\n    function showError(err) {\n      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n      throw err;\n    }\n\n    function displayChart(vegaEmbed) {\n      vegaEmbed(outputDiv, spec, embedOpt)\n        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n    }\n\n    if(typeof define === \"function\" && define.amd) {\n      requirejs.config({paths});\n      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n    } else if (typeof vegaEmbed === \"function\") {\n      displayChart(vegaEmbed);\n    } else {\n      loadScript(\"vega\")\n        .then(() => loadScript(\"vega-lite\"))\n        .then(() => loadScript(\"vega-embed\"))\n        .catch(showError)\n        .then(() => displayChart(vegaEmbed));\n    }\n  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-e491617883e726f8aefdb0a1c97cdaf8\"}, \"mark\": {\"type\": \"line\", \"point\": true}, \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\"}, {\"type\": \"quantitative\", \"field\": \"distance\"}, {\"type\": \"nominal\", \"field\": \"variable\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-06-01\", \"2020-07-14T08:24:34.989193\"]}, \"timeUnit\": \"yearmonthdate\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"distance\"}}, \"selection\": {\"selector015\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-e491617883e726f8aefdb0a1c97cdaf8\": [{\"date\": \"2020-06-01T00:00:00+00:00\", \"variable\": \"max_distance\", \"distance\": 0.0}, {\"date\": \"2020-07-14T08:24:34.989193+00:00\", \"variable\": \"max_distance\", \"distance\": 1767123.2876712328}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"odometer\", \"distance\": 198041.0}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"odometer\", \"distance\": 282735.0}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-05T00:01:48+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-06T00:11:44+00:00\", \"variable\": \"odometer\", \"distance\": 295098.0}, {\"date\": \"2020-06-07T00:11:36+00:00\", \"variable\": \"odometer\", \"distance\": 301534.0}, {\"date\": \"2020-06-08T00:11:18+00:00\", \"variable\": \"odometer\", \"distance\": 305660.0}, {\"date\": \"2020-06-09T00:06:48+00:00\", \"variable\": \"odometer\", \"distance\": 323544.0}, {\"date\": \"2020-06-10T00:07:16+00:00\", \"variable\": \"odometer\", \"distance\": 352162.0}, {\"date\": \"2020-06-11T00:06:51+00:00\", \"variable\": \"odometer\", \"distance\": 402273.0}, {\"date\": \"2020-06-12T00:07:14+00:00\", \"variable\": \"odometer\", \"distance\": 421123.0}, {\"date\": \"2020-06-13T00:07:02+00:00\", \"variable\": \"odometer\", \"distance\": 426678.0}, {\"date\": \"2020-06-14T00:07:37+00:00\", \"variable\": \"odometer\", \"distance\": 432066.0}, {\"date\": \"2020-06-15T00:07:06+00:00\", \"variable\": \"odometer\", \"distance\": 459655.0}, {\"date\": \"2020-06-16T00:07:02+00:00\", \"variable\": \"odometer\", \"distance\": 579657.0}]}}, {\"mode\": \"vega-lite\"});\n</script>",
-      "text/plain": "alt.Chart(...)"
-     },
-     "metadata": {},
-     "execution_count": 29
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alt.Chart(df).mark_line(point=True).encode(\n",
-    "    x=alt.X(\"yearmonthdate(date)\", scale=alt.Scale(domain=(start_date, end_date))),\n",
-    "    y=alt.X(\"distance\"),\n",
-    "    color=\"variable\",\n",
-    "    tooltip=[\"date\", \"distance\", \"variable\"],\n",
-    ").interactive()"
+    "current_km = int(df.tail(1)['Sträcka'])\n",
+    "remaining_km = int(max_distance_today / 1000 - current_km)\n",
+    "current_avg = int(current_km / days_driven)\n",
+    "max_avg = int(max_annual_distance / 1000 / 365)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": "<IPython.core.display.Markdown object>",
-      "text/markdown": "Uppdaterad 2020-06-16"
+      "text/markdown": "\n# Körda kilometer sedan 29 maj 2020\n\nFram till 2020-07-14 har vi kört **1392 km** och vi har **498 km** i utrymme till maximala km.\n\nVi har kört i snitt **30 km** per dag och kan köra i snitt **41 km** per dag.\n"
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 44
     }
    ],
    "source": [
-    "md(f\"Uppdaterad {dt.datetime.today().strftime('%Y-%m-%d')}\")"
+    "md(f\"\"\"\n",
+    "# Körda kilometer sedan 29 maj 2020\n",
+    "\n",
+    "Fram till {dt.datetime.today().strftime('%Y-%m-%d')} har vi kört **{current_km} km** och vi har **{remaining_km} km** i utrymme till maximala km.\n",
+    "\n",
+    "Vi har kört i snitt **{current_avg} km** per dag och kan köra i snitt **{max_avg} km** per dag.\n",
+    "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": "\n<div id=\"altair-viz-e2e1fc6ca3a84ba695a4e0aa19c8390d\"></div>\n<script type=\"text/javascript\">\n  (function(spec, embedOpt){\n    let outputDiv = document.currentScript.previousElementSibling;\n    if (outputDiv.id !== \"altair-viz-e2e1fc6ca3a84ba695a4e0aa19c8390d\") {\n      outputDiv = document.getElementById(\"altair-viz-e2e1fc6ca3a84ba695a4e0aa19c8390d\");\n    }\n    const paths = {\n      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n    };\n\n    function loadScript(lib) {\n      return new Promise(function(resolve, reject) {\n        var s = document.createElement('script');\n        s.src = paths[lib];\n        s.async = true;\n        s.onload = () => resolve(paths[lib]);\n        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n        document.getElementsByTagName(\"head\")[0].appendChild(s);\n      });\n    }\n\n    function showError(err) {\n      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n      throw err;\n    }\n\n    function displayChart(vegaEmbed) {\n      vegaEmbed(outputDiv, spec, embedOpt)\n        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n    }\n\n    if(typeof define === \"function\" && define.amd) {\n      requirejs.config({paths});\n      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n    } else if (typeof vegaEmbed === \"function\") {\n      displayChart(vegaEmbed);\n    } else {\n      loadScript(\"vega\")\n        .then(() => loadScript(\"vega-lite\"))\n        .then(() => loadScript(\"vega-embed\"))\n        .catch(showError)\n        .then(() => displayChart(vegaEmbed));\n    }\n  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-7ec87348599be0820e2080d1ae9de35b\"}, \"mark\": \"line\", \"encoding\": {\"color\": {\"type\": \"nominal\", \"field\": \"variable\", \"scale\": {\"scheme\": \"dark2\"}, \"title\": \"\"}, \"tooltip\": [{\"type\": \"temporal\", \"field\": \"date\", \"title\": \"Datum\"}, {\"type\": \"quantitative\", \"field\": \"Str\\u00e4cka\"}], \"x\": {\"type\": \"temporal\", \"field\": \"date\", \"scale\": {\"domain\": [\"2020-05-29\", \"2020-08-11T09:38:11.383136\"]}, \"timeUnit\": \"yearmonthdate\", \"title\": \"Datum\"}, \"y\": {\"type\": \"quantitative\", \"field\": \"Str\\u00e4cka\"}}, \"height\": 500, \"selection\": {\"selector029\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"width\": 600, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-7ec87348599be0820e2080d1ae9de35b\": [{\"date\": \"2020-05-29T00:00:00+00:00\", \"variable\": \"Max km\", \"Str\\u00e4cka\": 0.0}, {\"date\": \"2020-08-11T09:38:11.383136+00:00\", \"variable\": \"Max km\", \"Str\\u00e4cka\": 3041.095890410959}, {\"date\": \"2020-06-01T00:36:40+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 198.041}, {\"date\": \"2020-06-02T08:18:45+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 282.735}, {\"date\": \"2020-06-04T00:10:14+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 295.098}, {\"date\": \"2020-06-05T00:01:48+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 295.098}, {\"date\": \"2020-06-06T00:11:44+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 295.098}, {\"date\": \"2020-06-07T00:11:36+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 301.534}, {\"date\": \"2020-06-08T00:11:18+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 305.66}, {\"date\": \"2020-06-09T00:06:48+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 323.544}, {\"date\": \"2020-06-10T00:07:16+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 352.162}, {\"date\": \"2020-06-11T00:06:51+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 402.273}, {\"date\": \"2020-06-12T00:07:14+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 421.123}, {\"date\": \"2020-06-13T00:07:02+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 426.678}, {\"date\": \"2020-06-14T00:07:37+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 432.066}, {\"date\": \"2020-06-15T00:07:06+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 459.655}, {\"date\": \"2020-06-16T00:07:02+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 579.657}, {\"date\": \"2020-06-17T00:07:15+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 591.271}, {\"date\": \"2020-06-18T00:08:17+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 684.703}, {\"date\": \"2020-06-19T00:07:21+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 684.703}, {\"date\": \"2020-06-20T00:07:14+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 706.941}, {\"date\": \"2020-06-21T00:07:33+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 706.941}, {\"date\": \"2020-06-22T00:07:15+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 724.277}, {\"date\": \"2020-06-23T00:07:21+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 779.532}, {\"date\": \"2020-06-24T00:07:40+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 790.869}, {\"date\": \"2020-06-25T00:07:24+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 806.469}, {\"date\": \"2020-06-26T00:07:59+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 852.205}, {\"date\": \"2020-06-27T00:07:26+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 890.873}, {\"date\": \"2020-06-28T00:07:49+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 890.873}, {\"date\": \"2020-06-29T00:07:31+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 916.525}, {\"date\": \"2020-06-30T00:07:23+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 940.159}, {\"date\": \"2020-07-01T00:09:19+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 959.609}, {\"date\": \"2020-07-02T00:08:52+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1006.255}, {\"date\": \"2020-07-03T00:09:20+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1014.673}, {\"date\": \"2020-07-04T00:08:46+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1023.12}, {\"date\": \"2020-07-05T00:09:15+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1049.466}, {\"date\": \"2020-07-06T00:09:27+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1114.96}, {\"date\": \"2020-07-07T00:09:03+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1130.48}, {\"date\": \"2020-07-08T00:08:57+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1191.241}, {\"date\": \"2020-07-09T00:08:52+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1286.555}, {\"date\": \"2020-07-10T00:08:58+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1295.389}, {\"date\": \"2020-07-11T00:09:18+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1363.619}, {\"date\": \"2020-07-12T00:09:27+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1363.619}, {\"date\": \"2020-07-13T00:09:17+00:00\", \"variable\": \"K\\u00f6rda km\", \"Str\\u00e4cka\": 1392.86}]}}, {\"mode\": \"vega-lite\"});\n</script>",
+      "text/plain": "alt.Chart(...)"
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
+   "source": [
+    "alt.Chart(df, width=600, height=500).mark_line().encode(\n",
+    "    x=alt.X(\"yearmonthdate(date)\", title=\"Datum\", scale=alt.Scale(domain=(start_date, end_date))),\n",
+    "    y=alt.X(\"Sträcka\"),\n",
+    "    color=alt.Color(\"variable\", title=\"\", scale=alt.Scale(scheme=\"dark2\")),\n",
+    "    tooltip=[alt.Tooltip(\"date\", title=\"Datum\"), \"Sträcka\"],\n",
+    ").interactive()"
+   ]
   }
  ],
  "metadata": {
